--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             fetch(webhookUrl, {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json',
+                    'Content-Type': 'text/plain',
                 },
                 body: JSON.stringify(data),
             })
